tried to fix problem with background on mobile by changing formats on image

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,5 +1,5 @@
 .main {
-  background-image: url("/books.avif");
+  background-image: url("/books.png");
   /* background-attachment: fixed; */
 /*     background-repeat: no-repeat;
     background-position: center; */
@@ -9,7 +9,7 @@
 
 @media (min-width: 900px){
   .main {
-    background-image: url("/books.avif");
+    /* background-image: url("/books.avif"); */
     background-attachment: fixed;
   /*     background-repeat: no-repeat;
       background-position: center; */
